# frame-finder

./: .gitignore  Dockerfile  LICENSE  README.md  project_plan.md  pyproject.toml
app/: database.py  dependencies.py  main.py  schemas.py
app/routers/: feedback.py  health.py  search.py
app/static/: index.html
data/interim/: distilled_descriptions_2026_06_24.csv  racquets_cleaned_2026_02_14.csv  racquets_cleaned_2026_03_27.csv  racquets_cleaned_2026_05_16.csv  racquets_cleaned_2026_06_24.csv  racquets_desc_llm_input_03_25_26.csv  racquets_desc_llm_input_2026_03_27.csv  racquets_desc_llm_output_2026_03_27.csv  racquets_desc_llm_output_v1_03_25_26.csv  racquets_staging_2026_02_14.csv  racquets_staging_2026_03_27.csv
data/processed/: embedding_artifacts.npz  racquet_data_artifact.csv
data/raw/: racquets_raw_02_14_26.csv  racquets_raw_2026_03_27.csv  racquets_raw_2026_05_16.csv  racquets_raw_2026_06_24.csv
docs/decisions/: 01_pipeline_architecture.md  (+1 more)
frontend/: app.js  index.html  style.css
notebooks/: 01_load_data.ipynb  02_clean_data.ipynb  03_description_llm_experiments.ipynb  03_distillation_validation.ipynb  04_full_search_test.ipynb  04_text_engineering.ipynb  98_price_experiement.ipynb  99_extra_data_scraping_experimentation.ipynb
prompts/: sem_description_v1.txt  sem_description_v2.txt  sem_description_v3.txt
references/: data_dictionary.txt  data_directory_guide.txt  eval_data_sources.txt  search_learning.txt
scripts/: build_processed_artifacts.py  clean_raw_data.py  distill_descriptions.py  scrape_racquets.py
tests/: test_clean.py
(+445 files in other folders)
