[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-finder"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "beautifulsoup4",
    "anthropic",
    "google-genai",
    "pydantic",
    "sentence-transformers",
    "bm25s",
    "tabulate"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
frame-finder = "frame_finder.cli:main"